--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=satya1982*
+DB_PASSWORD=mysql
 DB_NAME=auth_db
 JWT_SECRET=mySuperSecretKey123!@#
+EMAIL_USER=EMAIL_USER=hariniprasad285@gmail.com
+EMAIL_PASS=rdbrjfnutxnbooxd
